goooodbye old website!

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Website Source Code"
+title: "(Old) Website Source Code"
 output: github_document
 ---
 
@@ -7,6 +7,6 @@ output: github_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-This repository contains source code for my personal [website](https://simonpcouch.github.io/). 
+Hi there! I appreciate you coming by. :)
 
-Thanks for Emily Zabor for the super helpful [tutorial](https://www.emilyzabor.com/tutorials/rmarkdown_websites_tutorial.html) on getting this up and running!
+I've transitioned my website over to [simonpcouch.com](simonpcouch.com)! Source code for _that_ website can be found [here](https://github.com/simonpcouch/simonpcouch.github.io).
