--- a/cv.Rmd
+++ b/cv.Rmd
@@ -4,122 +4,6 @@ title: "Simon P. Couch - CV"
 
 <link rel="stylesheet" href="styles.css" type="text/css">
 
-## Education
-**Reed College**  
-*Portland, Oregon* | *Expected Graduation May 2021*  
-•  B.A. in Mathematics with a Concentration in Statistics, Minor in Sociology  
-•  Relevant Coursework: Statistics Practicum (MATH 343), Data Science (MATH 241), Machine Learning (MATH 243), Deep Learning (CSCI 378), Probability (MATH 391), Mathematical Statistics (MATH 392), Vector Calculus (MATH 202), Linear Algebra (MATH 201), Gender & Work (SOC 322), Science & Social Difference (SOC 326), Race & Racism (SOC 343)  
+Hi there!
 
-<br>
-
-## Technical Experience 
-
-**Data Science Consultant** | *Reed College Instructional Technology Services*  
-*Portland, Oregon* | *December 2018 -- Present*  
-•	Collaborate with student and faculty researchers to efficiently and thoughtfully make use of data technologies to advance research goals across fields as varied as economics, linguistics, sociology, and biology  
-•	Implement expressive and reproducible R and Python programs to address analytical challenges  
-
-**R Developer** | *Andrew Bray Ph.D.*  
-*Portland, Oregon* | *December 2017 -- Present*   
-•	Contribute new functionality, documentation, and testing coverage to *infer*, a widely used R package for mathematically rigorous hypothesis testing in the tidyverse framework  
-•	Develop and maintain two *Comprehensive R Archive Network*-published R packages, *anyflights* (no longer supported) and *gbfs*, to provide more comprehensive data querying infrastructure in R  
-
-**Lab Assistant** | *Reed College Mathematics Department*  
-*Portland, Oregon* | *September 2019 -- Present*   
-•	Lead weekly lab sessions for two sets of 15 to 20 students in an introductory statistics course  
-
-**Analytics Intern** | *John Deere*  
-*Olathe, Kansas* | *May 2019 -- August 2019*  
-•	Automated data integrity checks on enterprise customer datasets using R, SQL, Python, and Jupyter   
-•	Evaluated third-party data purchases for integrity and insight potential using Python and ArcGIS  
-•	Constructed 9 Tableau dashboards combining insights from 4 surveys conducted across time, informing Deere’s roadmap to agricultural autonomy     
-
-**Researcher** | *Heather Kitada Smalley Ph.D.*  
-*Portland, Oregon* | *November 2018 -- September 2019*   
-•	Developed a novel querying approach to efficiently gather data from 73 bikeshare programs nationwide  
-•	Modeled spatial access to bikeshare services to understand the role of community demographics  
-
-**Researcher** | *Differential Privacy Group*  
-*Portland, Oregon* | *May 2018 -- July 2019*   
-•	Write, optimize, test, and maintain large bodies of R code to carry out power analysis of differentially private hypothesis tests  
-•	Collaborate on R and LaTeX code using Git and GitHub version control  
-
-**Analytics Intern** | *Kartini Clinic for Children & Families*  
-*Portland, Oregon* | *January 2018*  
-•	Analyzed, interpreted, and modeled financial and pharmacogenetic data  
-•	Conducted company-wide presentations to communicate notable findings  
-•	Advised future data collection strategies   
-
-<br>
-
-## Publications 
-[**Differentially Private Nonparametric Hypothesis Testing** *(2019)*](https://dl.acm.org/citation.cfm?id=3319535.3339821)  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;   *ACM Conference on Computer and Communications Security* | *London, United Kingdom*     
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  **Simon Couch**, Zeki Kazan, Kaiyan Shi, Andrew Bray, Adam Groce   
-[**Encouraging Equitable Bikeshare: Implications of Docked and Dockless Models for Spatial Equity** *(2019)*](https://arxiv.org/abs/1906.00129)     
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; *arXiv Pre-print* | *In Review*   
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  **Simon Couch**, Heather Kitada Smalley   
-
-
-<br>
-
-## Skills 
-**R** *(Advanced)*  | **ArcGIS** *(Intermediate)* | **Tableau** *(Intermediate)* | **SQL** *(Intermediate)* | **Git & GitHub** *(Intermediate)* | **LaTeX** *(Intermediate)*  | **Python** *(Basic)* | **CSS** *(Basic)* | **Jupyter** *(Basic)*  
-
-<br>
-
-## Additional Experience  
-**House Adviser** | *Reed College Residence Life *  
-*Portland, Oregon* | *August 2018 -- Present*  
-•	Build inclusive and active community for 15 to 20 residents through intentional engagement, proactive conflict resolution, individual counseling, resource referrals, and mentoring  
-•	Coordinate and document 4 thoughtful dorm floor events per semester  
-•	Document room inventories, event outcomes, advising sessions, and other administrative tasks  
-•	Advise two to three new House Advisers per year following appointment as House Adviser Mentor by peers and professional staff  
-
-**Peer Career Adviser** | *Reed College Center for Life Beyond Reed*  
-*Portland, Oregon* | *August 2018 -- May 2019*  
-•	Advised students one-on-one on various professional development pursuits  
-•	Coordinated in-residence workshops and information sessions   
-
-<br>
-
-## Honors & Awards    
-**Goldwater Nominee** | *Reed College*  
-*Portland, Oregon* | *November 2018, 2019*  
-One of four students chosen to represent Reed College as a nominee for the nationally competitive scholarship seeking "to identify and support college sophomores and juniors who show exceptional promise of becoming this Nation’s next generation of research leaders in these fields."  
-
-**2nd Place (tied)---Undergraduate Statistics Research Project Competition** | *American Statistical Association*  
-*International* | *September 2019*  
-A competition aiming to recognize research completed by undergraduates with exceptional significance, originality, and clarity of presentation, the first prize for which was awarded to “Encouraging Equitable Bikeshare: Implications of Docked and Dockless Models for Spatial Equity.”   
-
-**Commendation for Excellence** | *Reed College President’s Office*    
-*Portland, Oregon* | *June 2018*, *June 2019*    
-Awarded to the top 5 percent of each class, based on school year GPA, annually.   
-
-**1st Place (tied)---Undergraduate Statistics Research Project Competition** | *American Statistical Association*  
-*International* | *March 2019*  
-A competition aiming to recognize research completed by undergraduates with exceptional significance, originality, and clarity of presentation, the first prize for which was awarded to “A Differentially Private Wilcoxon Signed-Rank Test.”    
-
-**Honorable Mention---Undergraduate Statistics Class Project Competition** | *American Statistical Association*  
-*International* | *March 2019*  
-A competition centered on recognizing exceptional research completed as a class project for an undergraduate statistics course, judged on accuracy of analysis, clarity of presentation, originality, and practical significance. “A Geospatial Study of Bikeshare Station Locations,” a project aiming to quantify progress in bikeshare equity using machine learning methods, was awarded an honorable mention.   
-
-**All-State Academic Scholar** | *Lawrence Journal-World*  
-*De Soto, Kansas* | *June 2017*  
-An honor “meant to recognize the most promising high school senior [in Kansas]... based on their strong academics, extracurricular involvement, and essays."    
-
-<br>
-
-## Presentations 
-**Encouraging Equitable Bikeshare** | *Electronic Undergraduate Statistics Research Conference*  
-*Online* | *November 2019*    
-**An Alternative to Rank-Based College Exploration** | *Statistics Practicum Colloquium*  
-*Portland, Oregon* | *May 2019*    
-**Private Hypothesis Testing Using Rank-Based Methods** | *Theory and Practice of Differential Privacy*  
-*Toronto, Canada* | *October 2018*    
-**A Differentially Private Wilcoxon Signed-Rank Test** | *Reed College Mathematics Colloquium*  
-*Portland, Oregon* | *September 2018*  
-**gbfs: Easily Interface with General Bikeshare Feed Specification Files** | *Case Studies in Data Science Colloquium*  
-*Portland, Oregon* | *May 2018*  
-
-<br>
+I've transitioned this website over to [simonpcouch.com](simonpcouch.com). Come on by. :)
