--- a/contact.Rmd
+++ b/contact.Rmd
@@ -4,8 +4,6 @@ title: "Simon P. Couch - Contact"
 
 <link rel="stylesheet" href="styles.css" type="text/css">
 
-Feel free to reach out to me at: simonpatrickcouch@gmail.com <br>
+Hi there!
 
-or connect with me on [GitHub](https://github.com/simonpcouch), [Twitter](https://twitter.com/simonpcouch) or [LinkedIn](https://www.linkedin.com/in/simonpcouch/) (links in top right, too)!
-
-I'm always glad to talk data science, statistics, and carrying more inclusive masculinities in these settings.
+I've transitioned this website over to [simonpcouch.com](simonpcouch.com). Come on by. :)
