--- a/index.Rmd
+++ b/index.Rmd
@@ -4,8 +4,6 @@ title: "Simon P. Couch - Home"
 
 <link rel="stylesheet" href="styles.css" type="text/css">
 
-<img src="images/simon.jpg" style="width:30%; border:3px solid; margin-right: 20px" align="left">
+Hi there!
 
-I'm a junior at Reed College majoring in Mathematical Statistics and minoring in Sociology. I care about data science, statistics, and the thoughtful application of these practices in enabling and articulating social arguments. My research has focused on privacy-preserving data analysis as well as utilizing methods from statistics and data science to better understand social inequality. I've also recently wrapped up an internship in analytics at John Deere. Currently, I maintain some R software packages, teach statistics and data science, and work as a consultant to faculty and student researchers at Reed to effectively utilize R and other data tools in their projects. Source code for some of my projects (including this website) is available on GitHub @simonpcouch!
-
-I'm currently seeking research and internship opportunities for Summer 2020.
+I've transitioned this website over to [simonpcouch.com](simonpcouch.com). Come on by. :)
