correct link to new website

--- a/index.Rmd
+++ b/index.Rmd
@@ -6,4 +6,4 @@ title: "Simon P. Couch - Home"
 
 Hi there!
 
-I've transitioned this website over to [simonpcouch.com](simonpcouch.com). Come on by. :)
+I've transitioned this website over to [https://www.simonpcouch.com](simonpcouch.com). Come on by. :)
